fixed card text alignment for both mobile and responsive

--- a/scss/layout/_nyheter-responsive.scss
+++ b/scss/layout/_nyheter-responsive.scss
@@ -11,6 +11,7 @@
         @include h1-desktop;
        }
        h2{
+         margin-top: 2rem;
          align-self: flex-start;
        }
       }
@@ -29,6 +30,7 @@
 
               .kort-heading{
                 font-size: 20px;
+                height: 100px;
                 font-weight: bold;
                 padding: 20px;
               }
