--- a/scss/pages/_nyheter.scss
+++ b/scss/pages/_nyheter.scss
@@ -22,7 +22,6 @@
           align-self: flex-start;
         }  
         .nyheter-breadcrumb{
-          align-self: flex-start;
           @include breadcrumb;
           margin-top: 2rem;          
             a{
@@ -50,15 +49,14 @@
 
         .kort-heading{
           display: inline-block;
-          margin: 5px;
-          padding: 10px;
+          margin: 10px;
+          height: 30px;
           font-size: 13.5px;
           font-weight: bold;
         }
         .kort-bekrivning{
           display: inline-block;
-          margin: 5px;
-          padding: 10px;
+          margin: 10px;
           font-size: 12px;
         }
         
